name:                hcomments
version:             0.1.0
synopsis:
description:
homepage:            https://github.com/ilya-murzinov/hcomments
license:             MIT
license-file:        LICENSE
author:              Ilya Murzinov
maintainer:          murz42@gmail.com
copyright:           2017 Ilya Murzinov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hcomments
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       API
                     , Types
                     , Persistence
                     , Utils
  build-depends:       aeson
                     , base
                     , directory
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -Werror
  default-extensions:  RecordWildCards
                       OverloadedStrings

source-repository head
  type:     git
  location: git@github.com:ilya-murzinov/hcomments.git
