name:                hcomments
version:             0.1.0
synopsis:
description:
homepage:            https://github.com/ilya-murzinov/hcomments
license:             MIT
license-file:        LICENSE
author:              Ilya Murzinov
maintainer:          murz42@gmail.com
copyright:           2017 Ilya Murzinov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     API
                     , Types
                     , Persistence
                     , Server
                     , Service
                     , Utils
  build-depends:       aeson
                     , base
                     , bytestring
                     , directory
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                       OverloadedStrings

executable hcomments
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , directory
                     , monad-logger
                     , postgres-embedded
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
                     , hcomments
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -Werror
  default-extensions:  RecordWildCards
                       OverloadedStrings

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Specs.hs
  build-depends:       base
                     , servant
                     , servant-client
                     , http-client
                     , QuickCheck
                     , hspec
                     , postgres-embedded
                     , hcomments
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -Werror
  default-extensions:  RecordWildCards
                       OverloadedStrings


source-repository head
  type:     git
  location: git@github.com:ilya-murzinov/hcomments.git
